--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <b>Images:</b>
-  <%= @property.images %>
+  <%= @property.images_string %>
 </p>
 
 <p>
   <b>Keywords:</b>
-  <%= @property.keywords %>
+  <%= @property.keywords_string %>
 </p>
 
 <p>
