--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,56 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>ParasquidCs1876</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <title>CS 1876</title>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<%= yield %>
+        <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+        <!--[if lt IE 9]>
+            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+  </head>
+  <body>
+    <div class="container nopadding">
 
-</body>
+      <div class="row-fluid">
+        <div class="span12">
+          <%= render partial: 'layouts/header' %>
+        </div>
+      </div>
+
+      <div class="row-fluid">
+        <div class="container-fluid" id="container">
+          <div class="row-fluid">
+            <div class="span4 leftmenu">
+              <%= render partial: 'layouts/left_menu' %>
+            </div>
+
+            <div class="span8" id="content">
+              <div class="row-fluid">
+                <div class="span12">
+                  <% flash.each do |name, msg| %>
+                    <%= content_tag :div, :id => "flash_#{name}", :class => 'alert alert-success' do %>
+                      <button class="close" data-dismiss="alert">×</button>
+                      <strong>Success! </strong><%= msg %>
+                    <% end %>
+                  <% end %>
+                  <%= yield %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Explorer canvas, for IE6-8 support of canvas elements -->
+    <!--[if lt IE 9]>
+        <script src="js/excanvas.min.js"></script>
+    <![endif]-->
+
+  </body>
 </html>
