--- a/app/views/properties/_property.html.erb
+++ b/app/views/properties/_property.html.erb
@@ -5,7 +5,7 @@
   <div class="box-content nopadding" %>
     <div class="row-fluid nopadding">
       <div class="span8" style="margin: 0">
-        <%= image_tag ImageSuckr::GoogleSuckr.new.get_image_url({'q' => 'property'}) %>
+        <%= image_tag ImageSuckr::GoogleSuckr.new.get_image_url({'q' => 'apartment'}), style: 'width: 100%;' %>
       </div>
       <div class="span4">
         blah blah
