--- a/app/views/properties/_property.html.erb
+++ b/app/views/properties/_property.html.erb
@@ -4,30 +4,19 @@
   </div>
   <div class="box-content nopadding" %>
     <div class="row-fluid nopadding">
-      <div class="span8" style="margin: 0">
-        <%= image_tag ImageSuckr::GoogleSuckr.new.get_image_url({'q' => 'apartment'}), style: 'width: 100%;' %>
+      <div class="span8" style="margin: 0; height: 270px; overflow: hidden;">
+        <%= image_tag property.images_string.split(',').first, style: 'width: 100%; height: 100%' %>
       </div>
       <div class="span4">
-        blah blah
+        <p>
+          <%= property.type %><br />
+          <%= property.beds %> <%= property.bathrooms %> <%= property.car_spaces %>
+        </p>
+        <p>
+          <strong><%= property.desc_title %></strong><br />
+          <%= truncate property.desc_body, length: 120 %>
+        </p>
       </div>
     </div>
   </div>
 </div>
-
-<!--   <tr>
-    <td><%= property.images %></td>
-    <td><%= property.keywords %></td>
-    <td><%= property.type %></td>
-    <td><%= property.price %></td>
-    <td><%= property.beds %></td>
-    <td><%= property.bathrooms %></td>
-    <td><%= property.car_spaces %></td>
-    <td><%= property.address %></td>
-    <td><%= property.desc_title %></td>
-    <td><%= property.desc_body %></td>
-    <td><%= link_to 'Show', property %></td>
-    <td><%= link_to 'Edit', edit_property_path(property) %></td>
-    <td><%= link_to 'Destroy', property, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-
- -->
