add price range check

--- a/app/views/layouts/_left_menu.html.erb
+++ b/app/views/layouts/_left_menu.html.erb
@@ -20,6 +20,14 @@
         <%= f.label :max_beds %>
         <%= f.select :max_beds, 0..5, {selected: session[:search].max_beds || 5}, {style: 'width: 100%;'} %>
       </div>
+      <div style="float: left; width: 48%">
+        <%= f.label :min_price %>
+        <%= f.select :min_price, prices, {}, {style: 'width: 100%;'} %>
+      </div>
+      <div style="float: right; width: 48%">
+        <%= f.label :max_price %>
+        <%= f.select :max_price, prices, {selected: session[:search].max_price || 10000000}, {style: 'width: 100%;'} %>
+      </div>
       <%= f.submit 'Search' %>
     <% end %>
   </div>
