--- a/app/views/properties/_property.html.erb
+++ b/app/views/properties/_property.html.erb
@@ -10,6 +10,7 @@
       <div class="span4">
         <p>
           <%= property.type %><br />
+          <%= number_to_currency property.price %><br />
           <%= property.beds %> <%= property.bathrooms %> <%= property.car_spaces %>
         </p>
         <p>
