js for selecting all property types

--- a/app/views/layouts/_common_menu_content.html.erb
+++ b/app/views/layouts/_common_menu_content.html.erb
@@ -37,3 +37,14 @@
     <div style='clear: both'></div>
   <% end %>
 </div>
+
+
+
+<script>
+$(function() {
+  $('#search_type option:first-child').click(function() {
+    $('#search_type option').attr('selected', 'selected')
+    $('#search_type option:first-child').removeAttr('selected')
+  })
+})
+</script>
