some changes for modal details

--- a/app/views/layouts/_common_menu_content.html.erb
+++ b/app/views/layouts/_common_menu_content.html.erb
@@ -38,13 +38,11 @@
   <% end %>
 </div>
 
-
-
 <script>
 $(function() {
   $('#search_type option:first-child').click(function() {
-    $('#search_type option').attr('selected', 'selected')
-    $('#search_type option:first-child').removeAttr('selected')
-  })
-})
+    $('#search_type option').attr('selected', 'selected');
+    $('#search_type option:first-child').removeAttr('selected');
+  });
+});
 </script>
