--- a/app/views/layouts/_left_menu.html.erb
+++ b/app/views/layouts/_left_menu.html.erb
@@ -1,4 +1,4 @@
-<div class='box' style='position: fixed; width: 287px;'>
+<div class='box' style='width: 287px;'>
   <div class='box-title'>
     Search
   </div>
