--- a/app/views/properties/_property.html.erb
+++ b/app/views/properties/_property.html.erb
@@ -1,4 +1,4 @@
-<%= link_to property do %>
+<%= avgrund_to property, {}, "Show Property" do %>
   <div class="box">
     <div class="box-title">
       <%= property.address %>
