add image carousel

--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -1,3 +1,5 @@
 <% @properties.each do |property| %>
+  <%= avgrund_to property, {}, "Show Property" do %>
     <%= render property %>
+  <% end %>
 <% end %>
