auto overflow in case there is a long wall of text

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 @import 'bootstrap';
 .modal-body {
   max-height: 570px;
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 .price {
   color: darkred;
