turbolinks plus change in property type selector

--- a/app/views/layouts/_common_menu_content.html.erb
+++ b/app/views/layouts/_common_menu_content.html.erb
@@ -41,8 +41,8 @@
 <script>
 $(function() {
   $('#search_type option:first-child').click(function() {
-    $('#search_type option').attr('selected', 'selected');
-    $('#search_type option:first-child').removeAttr('selected');
+    $('#search_type option').removeAttr('selected');
+    $('#search_type option:first-child').attr('selected', 'selected');
   });
 });
 </script>
