--- a/app/views/layouts/_left_menu_content.html.erb
+++ b/app/views/layouts/_left_menu_content.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div style="float: right; width: 48%">
     <%= f.label :max_bathrooms %>
-    <%= f.select :max_bathrooms, 0..5, {selected: @search.max_bathrooms || 5}, {style: 'width: 100%;'} %>
+    <%= f.select :max_bathrooms, 0..5, {selected: @search.max_bathrooms || MAX_BATHROOMS}, {style: 'width: 100%;'} %>
   </div>
 </div>
 
@@ -16,6 +16,6 @@
   </div>
   <div style="float: right; width: 48%">
     <%= f.label :max_car_spaces %>
-    <%= f.select :max_car_spaces, 0..5, {selected: @search.max_car_spaces || 5}, {style: 'width: 100%;'} %>
+    <%= f.select :max_car_spaces, 0..5, {selected: @search.max_car_spaces || MAX_CAR_SPACES}, {style: 'width: 100%;'} %>
   </div>
 </div>
