--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing property</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @property %> |
-<%= link_to 'Back', properties_path %>
+<div class='box' style='width: 100%;'>
+  <div class='box-title'>
+    Edit Property
+  </div>
+  <div class="box-content" %>
+		<%= render 'form' %>
+	</div>
+</div>
