--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New property</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', properties_path %>
+<div class='box' style='width: 100%;'>
+  <div class='box-title'>
+    New Property
+  </div>
+  <div class="box-content" %>
+		<%= render 'form' %>
+	</div>
+</div>
